@@ -16,3 +16,12 @@
   pages={1},
   year={1984}
 }
+
+@inproceedings{kriegel2011interpreting,
+  title={Interpreting and unifying outlier scores},
+  author={Kriegel, Hans-Peter and Kroger, Peer and Schubert, Erich and Zimek, Arthur},
+  booktitle={Proceedings of the 2011 SIAM International Conference on Data Mining},
+  pages={13--24},
+  year={2011},
+  organization={SIAM}
+}
