@@ -5,3 +5,4 @@ v<0.0.2>, <01/05/2020> -- Improve code coverage.
 v<0.0.2>, <01/11/2020> -- Full code refactor.
 v<0.0.3>, <02/15/2020> -- Add documentation.
 v<0.0.3>, <02/21/2020> -- Major code refactoring for stable release.
+v<0.0.3>, <02/21/2020> -- Add predict_proba
